--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Record Player</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+  <meta charset="UTF-8">
+  <title>CodePen - Interactive Record Player jQuery</title>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,500&amp;display=swap'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
+</head>
 <body>
-    <div class="loader">LOADING</div>
-    <div class="player">
-        <div class="record">
-            <div class="label"></div>
-        </div>
-        <div class="stick">
-            <div class="screw"></div>
-        </div>
-        <button class="power"></button>
-        <div class="slidecontainer">
-            <input type="range" class="slider" min="0" max="1" step="0.1" value="0.7">
-        </div>
-    </div>
-    <audio loop class="mysong"
-        src="mimm.mp3"></audio>
-<script src="script.js"></script>
+
+<div class="loader">LOADING</div>
+	<div class="player">
+		<div class="record">
+			<div class="label"></div>
+		</div>
+		<div class="stick">
+			<div class="screw"></div>
+		</div>
+		<button class="power"></button>
+		<div class="slidecontainer">
+  		<input type="range" class="slider" min="0" max="1" step="0.1" value="0.7">
+	</div>
+	</div>
+	<audio loop class="mysong" src="mimm.mp3" preload="auto"></audio>
+
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js'></script>
+<script  src="./script.js"></script>
+
 </body>
 </html>
