--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Interactive Record Player jQuery</title>
+  <title>Record player</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,500&amp;display=swap'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
